<resources>
    <string name="app_name">BlogApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="new_post">New Post</string>
    <string name="change_photo">Change Photo</string>
    <string name="add_location">Add location</string>
    <string name="post">Post</string>
    <string name="comments">Comments</string>
    <string name="write_something">Write something</string>
    <string name="edit_post">Edit Post</string>
    <string name="save">Save</string>
    <string name="edit_info">Edit Info</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="camera">Camera</string>
    <string name="select_photo">Select photo</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="info_continue">Continue</string>
    <string name="posts">Posts</string>
    <string name="edit_account">Edit Account</string>
    <string name="januar_27">Januar 27</string>
    <string name="dsadasdsadadada">Some description</string>
    <string name="sasa_sladic">Sasa Sladic</string>
    <string name="sign_up">Sign up</string>
    <string name="blog_app">Blog App</string>
    <string name="password">Password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm</string>
    <string name="todo">TODO</string>
    <string name="dont_have_account">Dont have account?</string>
    <string name="user_info">User Info</string>
    <string name="dsadsadsadd">Some text</string>
    <string name="_12_likes">12 Likes</string>
    <string name="view_all_0_comments">View all 0 comments</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

</resources>