<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:orientation="vertical"
    tools:context=".UserInfoActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/user_info"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@color/colorLightGrey"
        android:id="@+id/imgUserInfo"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/camera"
        android:id="@+id/btnCamera"
        android:background="@drawable/btn_round"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textAllCaps="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_photo"
        android:textColor="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:id="@+id/txtSelectPhoto"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutNameUserInfo"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNameUserInfo"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutLastnameameUserInfo"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtLastnameUserInfo"
            android:hint="@string/lastname"
            android:inputType="text"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/info_continue"
        android:id="@+id/btnContinue"
        android:background="@drawable/btn_round"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="70dp"
        android:textSize="17sp"
        android:textAllCaps="false"/>









</LinearLayout>