<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@color/colorGrey"
                android:id="@+id/imgCommentProfile"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="6dp"
                android:orientation="vertical"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:id="@+id/txtCommentName"
                    android:text="@string/sasa_sladic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:id="@+id/txtCommentDate"
                    android:textColor="@color/colorLightGrey"
                    android:text="@string/januar_27"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_baseline_delete_forever_24"
                android:background="@color/transparent"
                android:layout_gravity="center_vertical"
                android:id="@+id/btnDeleteComment"
                android:contentDescription="@string/todo" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtCommentText"
            android:textSize="14sp"
            android:textColor="@color/colorGrey"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:text="@string/dsadasdsadadada" />
        <VideoView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#cccccc"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>