<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imgPostProfile"
                android:src="@color/colorLightGrey"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="6dp"
                android:orientation="vertical"
                tools:ignore="RtlSymmetry">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/txtPostName"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:text="@string/sasa_sladic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:id="@+id/txtPostDate"
                    android:textColor="@color/colorLightGrey"
                    android:text="@string/januar_27"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:id="@+id/btnPostOption"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_more_vert_24"
                android:contentDescription="@string/todo" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:id="@+id/txtPostDesc"
            android:textColor="@color/colorGrey"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:text="@string/dsadsadsadd"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:id="@+id/imgPostPhoto"
            android:src="@color/colorLightGrey"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnPostLike"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_favorite_outline"
                android:background="@android:color/transparent"
                android:contentDescription="@string/todo" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnPostComment"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_comment"
                android:background="@android:color/transparent"
                android:contentDescription="@string/todo" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12_likes"
            android:id="@+id/txtPostLikes"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:textSize="13sp"
            android:textColor="@color/colorGrey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all_0_comments"
            android:id="@+id/txtPostComments"
            android:layout_marginTop="4dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="20dp"
            android:textSize="12sp"
            android:textColor="@color/colorLightGrey"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ccc"/>


    </LinearLayout>


</androidx.cardview.widget.CardView>