<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommentActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        app:title=""
        android:background="@color/colorWhite"
        android:elevation="1dp"
        android:layout_height="?attr/actionBarSize">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="@android:color/transparent"
            android:layout_marginEnd="16dp"
            android:onClick="goBack"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="?attr/actionBarSize"
        android:id="@+id/recyclerComments" />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_height="?attr/actionBarSize">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:layout_marginLeft="6dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/write_something"
            android:inputType="textMultiLine"
            android:layout_marginRight="6dp"
            android:textSize="16sp"
            android:id="@+id/txtAddComment"
            android:autofillHints="" />

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_send_24"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="6dp"
            android:onClick="addComment"
            android:id="@+id/btnAddComment"
            android:background="@drawable/btn_round"
            android:contentDescription="@string/todo" />



    </LinearLayout>
</RelativeLayout>